--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
 ktor_version=2.2.2
 kotlin_version=1.8.0
 logback_version=1.2.11
+exposed_version=0.40.1
+postgresql_version=42.3.7
+hikari_version=5.0.1
+koin_version=3.2.2
 kotlin.code.style=official
